--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,4 +1,4 @@
-<!-- ⭐ NEW FILE - Simple HTML client to test Socket.io -->
+<!-- ⭐ NEW FILE - Simple HTML client to test Socket.io
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -279,4 +279,4 @@
     });
   </script>
 </body>
-</html>
+</html> -->
